--- a/mach-to-mph.html
+++ b/mach-to-mph.html
@@ -1,190 +1,158 @@
 <!DOCTYPE html>
-<html lang="en"><head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Mach to Miles per Hour Converter</title>
-<meta content="Convert Mach to Miles per Hour with our precise, user-friendly calculator. Ensure accuracy in speed conversions for aviation and scientific applications." name="description"/>
-<meta content="Ugo Candido" name="author"/>
-<link href="https://calcdomain.com/mach-to-mph.html" rel="canonical"/>
-<style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1, h2 {
-            color: #005A9C;
-        }
-        .calculator-layout {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 2rem;
-        }
-        .calculator-container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .form-group {
-            margin-bottom: 1rem;
-        }
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-        }
-        .form-control {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 1rem;
-        }
-        .results-container {
-            background: #e9ecef;
-            padding: 15px;
-            border-radius: 4px;
-            margin-top: 1rem;
-        }
-        .result-item {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0.5rem;
-        }
-        .result-value {
-            font-weight: bold;
-        }
-        .author-box {
-            margin-top: 2rem;
-            color: #666;
-            font-size: 0.9rem;
-        }
-        .content-container h2 {
-            margin-top: 2rem;
-            border-bottom: 2px solid #ccc;
-            padding-bottom: 0.5rem;
-        }
-        .formula-box {
-            background-color: #f1f1f1;
-            padding: 1rem;
-            border-radius: 4px;
-            margin-top: 1rem;
-        }
-        .faq-section h3 {
-            margin-top: 1rem;
-            font-weight: bold;
-        }
-    </style>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
-
+<html lang="en">
+<head>
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mach to MPH Converter – Mach Number to Miles Per Hour</title>
+  <meta name="description" content="Instantly convert Mach number to miles per hour (mph). Use for aviation, ballistics, supersonic research, and education.">
+  <link rel="canonical" href="https://calcdomain.com/mach-to-mph.html"/>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="search.js" defer></script>
 </head>
-<body>
-
-<div class="container">
-<h1>Mach to Miles per Hour Converter</h1>
-<p>This converter allows you to easily calculate the speed in miles per hour from Mach numbers, typically used in aviation and aerodynamics.</p>
-<div class="calculator-layout">
-<section aria-labelledby="calculator-heading" class="calculator-container" id="mach-converter">
-<h2 id="calculator-heading">Mach to MPH Converter</h2>
-<div class="form-group">
-<label for="machNumber">Mach Number *</label>
-<input aria-required="true" class="form-control" id="machNumber" placeholder="Enter Mach number" type="number"/>
-</div>
-<button class="form-control" id="calculateBtn">Convert</button>
-<section aria-live="polite" class="results-container">
-<div class="result-item">
-<span>Miles per Hour:</span>
-<span class="result-value" id="mphResult">0</span>
-</div>
-</section>
-</section>
-<article class="content-container">
-<section>
-<h2>Data Source and Methodology</h2>
-<p>The calculations are based on the standard speed of sound at sea level, approximately 761.2 mph. <a href="https://www.inchcalculator.com/convert/mach-to-mile-per-hour/" rel="noopener" target="_blank">Reference Source</a>. All calculations are strictly based on the formulas and data provided by this source.</p>
-</section>
-<section>
-<h2>The Formula Explained</h2>
-<div class="formula-box">
-<p>Speed (mph) = Mach × 761.2</p>
-</div>
-</section>
-<section>
-<h2>Glossary of Terms</h2>
-<ul>
-<li><strong>Mach Number:</strong> A dimensionless unit representing the ratio of the speed of an object to the speed of sound.</li>
-<li><strong>Miles per Hour (mph):</strong> A unit of speed expressing the number of miles traveled in one hour.</li>
-</ul>
-</section>
-<section>
-<h2>Example Calculation</h2>
-<p>For example, Mach 2 means the object is traveling at twice the speed of sound. Using our formula, this translates to approximately 1522.4 mph (2 × 761.2).</p>
-</section>
-<section class="faq-section">
-<h2>Frequently Asked Questions (FAQ)</h2>
-<div>
-<h3>What is Mach speed?</h3>
-<p>Mach speed refers to the speed of an object moving through air or any other fluid medium, compared to the speed of sound in that medium.</p>
-<h3>Why is the speed of sound used?</h3>
-<p>The speed of sound is a natural constant used as a reference point for high-speed travel, especially in aviation and aerospace.</p>
-<h3>Can Mach numbers be negative?</h3>
-<p>No, Mach numbers represent a ratio of speed, hence they are always positive or zero.</p>
-<h3>Does altitude affect Mach speed?</h3>
-<p>Yes, as altitude increases, the speed of sound decreases, thus affecting the Mach number.</p>
-<h3>What factors affect the speed of sound?</h3>
-<p>The speed of sound varies based on the medium's composition, temperature, and pressure.</p>
-</div>
-</section>
-<div class="author-box">
-<p>Tool developed by <strong>Ugo Candido</strong>. Content verified by our expert team. Last reviewed for accuracy on: October 1, 2023.</p>
-</div>
-</article>
-</div>
-</div>
-<script>
-    document.getElementById('calculateBtn').addEventListener('click', function() {
-        const machNumber = parseFloat(document.getElementById('machNumber').value);
-        if (!isNaN(machNumber)) {
-            const mph = machNumber * 761.2;
-            document.getElementById('mphResult').textContent = mph.toFixed(2);
-        } else {
-            document.getElementById('mphResult').textContent = 'Invalid input';
-        }
+<body class="bg-gray-50 text-gray-900">
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4">
+      <div class="flex justify-between items-center">
+        <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+        <div class="w-full max-w-md hidden md:block mx-8">
+          <div class="relative">
+            <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500" autocomplete="off">
+          </div>
+        </div>
+        <div class="hidden md:flex items-center space-x-6 text-sm">
+          <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+        <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+      <div id="mobile-menu" class="md:hidden mt-4 hidden">
+        <div class="space-y-2">
+          <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="container mx-auto px-4 lg:px-6 py-10">
+    <div class="flex flex-col lg:flex-row gap-8">
+      <section class="w-full lg:w-2/3">
+        <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+          <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+          <a href="math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
+          <span class="text-gray-900">Mach to MPH</span>
+        </nav>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h1 class="text-3xl font-extrabold text-gray-900 mb-2">Mach to MPH Converter</h1>
+          <p class="text-gray-600 mb-6">Convert Mach (speed of sound) to miles per hour (mph) instantly. Useful for aviation, ballistics, and supersonic science.</p>
+          <form id="machForm" class="space-y-6" autocomplete="off">
+            <div>
+              <label for="machInput" class="block text-sm font-medium text-gray-700 mb-2">Mach Number</label>
+              <input id="machInput" type="number" step="any" class="w-full px-4 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="e.g., 1.5">
+            </div>
+            <div class="bg-blue-50 p-6 rounded-lg border border-blue-200 flex flex-col items-center">
+              <div class="text-xs text-gray-500 mb-1 self-start">Result:</div>
+              <div class="text-xs text-gray-500 mb-1 self-start">Miles per Hour (mph)</div>
+              <div id="mphResult" class="text-2xl font-bold text-blue-600">0.00</div>
+            </div>
+          </form>
+          <section class="mt-10 prose">
+            <h2>Formula</h2>
+            <div class="bg-gray-100 p-3 rounded font-mono text-center border text-lg my-2">
+              <code>mph = Mach × 761.207</code>
+            </div>
+            <p>
+              1 Mach at sea level (standard conditions) = 761.207 mph.<br>
+              <em>Speeds will vary with altitude, temperature, and humidity, but this is the US/ICAO reference value.</em>
+            </p>
+            <h2>Example Calculation</h2>
+            <ul>
+              <li>2 Mach × 761.207 = 1522.41 mph</li>
+              <li>Result: 2 Mach = 1522.41 mph</li>
+            </ul>
+            <h2>Common Use Cases</h2>
+            <ul>
+              <li><strong>Aviation:</strong> Supersonic/transonic jet speeds, Concorde, military jets</li>
+              <li><strong>Ballistics:</strong> Bullet/projectile velocities, wind tunnel work</li>
+              <li><strong>Education:</strong> Physics, science projects, STEM research</li>
+            </ul>
+            <h2>Frequently Asked Questions</h2>
+            <details>
+              <summary>What is Mach?</summary>
+              <p>Mach is a dimensionless number representing the ratio of speed to the speed of sound in air. Mach 1 = speed of sound.</p>
+            </details>
+            <details>
+              <summary>Does Mach 1 always equal 761.207 mph?</summary>
+              <p>No, that’s the value at sea level, standard pressure, and 15°C. Actual speed of sound changes with conditions (e.g., altitude, temp).</p>
+            </details>
+            <details>
+              <summary>Can I use this for high-altitude/spaceflight?</summary>
+              <p>For ballpark estimates, yes. For precise calculations in rarefied/ionized air or space (where “sound” is undefined), please use environment-specific values.</p>
+            </details>
+            <h2>Data Source</h2>
+            <p>US National Weather Service, ICAO Standard Atmosphere: 1 Mach = 340.29 meters/second = 761.207 mph exactly.</p>
+          </section>
+          <div class="mt-8 pt-6 border-t border-gray-200 text-sm text-gray-600">
+            Tool by <strong>Ugo Candido</strong>. Last reviewed: 2025.
+          </div>
+        </div>
+      </section>
+      <aside class="w-full lg:w-1/3">
+        <div class="sticky top-24 space-y-6">
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Quick Reference</h2>
+            <ul class="space-y-2 text-sm text-gray-600">
+              <li>Mach 1 = 761.207 mph</li>
+              <li>Mach 0.5 = 380.60 mph</li>
+              <li>Mach 2 = 1522.41 mph</li>
+              <li>Mach 3 = 2283.62 mph</li>
+            </ul>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Related Tools</h2>
+            <ul class="space-y-2 text-sm text-blue-600">
+              <li><a href="mph-to-mach.html" class="hover:underline">MPH to Mach</a></li>
+              <li><a href="knots-to-mph.html" class="hover:underline">Knots to MPH</a></li>
+              <li><a href="mph-to-kph.html" class="hover:underline">MPH to KPH</a></li>
+              <li><a href="meters-per-second-to-mph.html" class="hover:underline">m/s to MPH</a></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </main>
+  <footer class="bg-white border-t mt-12">
+    <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+      <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+      <div class="mt-4 space-x-4">
+        <a href="about.html" class="hover:text-blue-600">About</a>
+        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+        <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+        <a href="terms.html" class="hover:text-blue-600">Terms</a>
+      </div>
+    </div>
+  </footer>
+  <script>
+    const machInput = document.getElementById('machInput');
+    const mphResult = document.getElementById('mphResult');
+    function updateMachToMPH() {
+      const mach = parseFloat(machInput.value) || 0;
+      mphResult.textContent = (mach * 761.207).toFixed(2);
+    }
+    machInput.addEventListener('input', updateMachToMPH);
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+      const menu = document.getElementById('mobile-menu');
+      menu?.classList.toggle('hidden');
     });
-</script>
-
-
-
-```
-
-
-</body></html>
+  </script>
+</body>
+</html>
