--- a/german-pension.html
+++ b/german-pension.html
@@ -17,31 +17,12 @@
 </head>
 <body class="bg-gray-50 text-gray-900">
   <header class="bg-white shadow-sm sticky top-0 z-50">
-    <nav class="container mx-auto px-4 lg:px-6 py-4">
-      <div class="flex justify-between items-center">
-        <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
-        <div class="w-full max-w-md hidden md:block mx-8">
-          <div class="relative">
-            <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500" autocomplete="off">
-          </div>
-        </div>
-        <div class="hidden md:flex items-center space-x-6 text-sm">
-          <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
-        </div>
-        <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-          </svg>
-        </button>
-      </div>
-      <div id="mobile-menu" class="md:hidden mt-4 hidden">
-        <div class="space-y-2">
-          <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
-        </div>
-      </div>
-    </nav>
+   <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+  <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+  <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
+  <a href="subcategories/finance-retirement.html" class="hover:text-blue-600">Retirement Calculators</a> &raquo;
+  <span class="text-gray-900">German Pension Calculator</span>
+</nav>
   </header>
   <main class="container mx-auto px-4 lg:px-6 py-10">
     <div class="flex flex-col lg:flex-row gap-8">
