--- a/mph-to-kph.html
+++ b/mph-to-kph.html
@@ -146,12 +146,12 @@
             <!-- Left Column: Calculator & Content -->
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
-                <nav class="text-sm mb-4 text-gray-600">
-                    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="categories/conversions.html" class="hover:text-blue-600">Conversions</a> &raquo;
-                    <a href="/subcategories/speed-conversions.html" class="hover:text-blue-600">Speed Conversions</a> &raquo;
-                    <span>MPH to KPH Converter</span>
-                </nav>
+               <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+          <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+          <a href="math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
+          <a href="subcategories/measurement-unit-conversions.html" class="hover:text-blue-600">Measurement Unit Conversions</a> &raquo;
+          <span class="text-gray-900">MPH to KPH Converter</span>
+        </nav>
 
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <!-- Calculator Title and Intro -->
